# libusb

./: .gitignore  AUTHORS  configure.ac
examples/: hotplugtest.c
libusb/: Makefile.am  io.c
libusb/os/: emscripten_webusb.cpp  events_posix.c  events_posix.h
tests/: Makefile.am  libusb_testlib.h  umockdev-server.c  umockdev-server.h  umockdev.c  umockdev.cpp
tests/emulator/: index.mjs  package-lock.json  package.json
tests/virtusb/: index.js  package-lock.json  package.json
tests/webusb-test-shim/: binding.gyp  index.js  package-lock.json  package.json  umockdev-server-bindings.cpp
